--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "github-list",
 	"version": "0.1.0",
+	"homepage": "https://v1tal4ik.github.io/GoIt-test",
 	"private": true,
 	"dependencies": {
 		"@hookform/resolvers": "^2.9.11",
@@ -18,6 +19,8 @@
 		"yup": "^1.0.0"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
@@ -40,5 +43,8 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
+	},
+	"devDependencies": {
+		"gh-pages": "^5.0.0"
 	}
 }
